style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  /* Does not work as my computer is not set to dark mode*/
  color-scheme: dark light;

  background-color: black;
  color: white;
}

body {
  font-family: system-ui;
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
}

.wrapper {
  max-width: 50rem;
  margin-inline: auto;
  padding-inline: 1rem;
}

.site-title {
  font-size: 3rem;
  text-align: center;
}

.section-title {
  font-size: 2.25rem;
}

section {
  padding-block: 5rem;
}

.diagonal {
  position: relative;
  /*background-image: linear-gradient(45deg, #12c2e9, #c471ed, #f64f59);*/
}

/* This make sure the skew angle is always the same when you resize the screen */
.diagonal::after {
  content: '';
  /*background: steelblue;*/
  background-image: linear-gradient(45deg, #12c2e9, #c471ed, #f64f59);
  position: absolute;
  z-index: -1;
  inset: 0;

  transform: skewY(-5deg);
}

